Site container to fix overflow.

--- a/p/hsg/style.css
+++ b/p/hsg/style.css
@@ -4,16 +4,20 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: white;
   background-color: #ded8cc;
+  height: 100%;
+}
+
+.site-container {
+  height: 100%;
+  overflow: hidden;
   display: flex;
   place-content: center;
   align-items: center;
-  height: 100%;
-  overflow: hidden;
 }
 
 .hsg-column {
   width: 75px;
-  height: 100%;
+  height: 100vh;
 }
 
 .wickerino {
@@ -101,7 +105,7 @@ body {
   }
 }
 
-body > span {
+.site-container > span {
   position: absolute;
   opacity: 0;
   animation: 5s linear 16s 1 fadeInStop forwards;
